--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Eddie Llanos</h1>
+        <img src="https://raw.githubusercontent.com/ellanos-bit/ellanos.github.io/refs/heads/main/1730721264714.jpg" alt="Eddie Llanos" width="150">
         <p>Technical Product Manager | <a href="mailto:edwardllanos@gmail.com">edwardllanos@gmail.com</a> | <a href="linkedin.com/in/edwardllanos"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
     </header>
 
