--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <h2>Portfolio</h2>
         <p>Here are some of my projects:</p>
         <ul>
-            <li>Project 1</li>
+            <li> <a href="meal-prep-planner.html">Meal Prep Planner</a> – A web app to organize weekly meals, generate shopping lists, and save favorite recipes.</li>
             <li>Project 2</li>
             <li>Project 3</li>
         </ul>
