--- a/meal-prep-planner.html
+++ b/meal-prep-planner.html
@@ -40,8 +40,25 @@
         </p>
     </section>
 
+    <section id="meal-plan-input">
+        <h2>Generate Your Meal Plan</h2>
+        <form id="meal-plan-form">
+            <label for="dietary-restrictions">Dietary Restrictions:</label>
+            <input type="text" id="dietary-restrictions" name="dietary-restrictions"><br><br>
+
+            <label for="calorie-goals">Calorie Goals:</label>
+            <input type="number" id="calorie-goals" name="calorie-goals"><br><br>
+
+            <label for="preferred-cuisines">Preferred Cuisines:</label>
+            <input type="text" id="preferred-cuisines" name="preferred-cuisines"><br><br>
+
+            <button type="button" onclick="generateMealPlan()">Generate Meal Plan</button>
+        </form>
+    </section>
+
     <footer>
         <p>© 2025 Eddie Llanos</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
